--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,16 @@
-<h1>spesific user post</h1>
+<div>
+  <h1><%=@post.text%></h1>
+  <p>comments:<%= @post.comments_counter || 0%></p>
+  <p>likes:<%= @post.likes_counter || 0%></p>
+  <hr />
+  <h1>Comments</h1>
+  <hr />
+  <% @user.each do |u|%>
+  <% @comments.each do |comment|%>
+  <%if u.id == comment.user_id%>
+  <h2><%= u.name%>:-</h2>
+  <h3><%= comment.text%>.</h3>
+  <%end%>
+  <%end%>
+  <%end%>
+</div>
