--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div>
-  <img src='#{ <%= @user.photo %> }' width='100' height='100' />
-  <h1><%= @user.name%></h1>
-  <p>number of posts: <%=@user.posts_counter || 0%></p>
+  <img src='#{<%= @user.photo %>}' alt='user-img' width='100' height='100' />
+  <span><strong><%= @user.name%></strong></span><br />
+  <span><strong>number of posts: <%=@user.posts_counter || 0%><strong></span>
 </div>
 <hr />
 <h1>All Posts</h1>
@@ -14,8 +14,7 @@
   <div>
     <h2><%= post.title%></h2>
     <h3><%= post.text%></h3>
-    <p>comments: <%= post.comments_counter || 0%></p>
-    <p>likes: <%= post.likes_counter || 0%></p>
+    <p>comments: <%= post.comments_counter || 0%>, likes: <%= post.likes_counter || 0%></p>
   </div>
   <hr />
 
