--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <% @users.each do |user|%>
 <div>
   <img src='#{ <%= user.photo %> }' width='100' height='100' />
-  <h1><%= user.name%></h1>
+  <span><%= user.name%></span>
   <p>number of posts: <%=user.posts_counter || 0%></p>
 </div>
 <%end%>
