--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,14 @@
 <div>
   <img src='#{ <%= @user.photo %> }' width='100' height='100' />
-  <h1><%= @user.name%></h1>
+  <span><%= @user.name%></span>
+  <h4>Number of posts:- <%= @user.posts_counter || 0%></h4>
   <h3>Bio: <%=@user.bio %></h3>
 </div>
 <hr />
 <h1>Last Posts</h1>
 <div>
   <% if @posts.empty? %>
-  <h1>This Uer Dose Not Have Any Posts</h1>
+  <h1>This User Dose Not Have Any Posts</h1>
   <%end%>
   <% @posts.each do |post|%>
   <% if post.user_id = @user.id %>
