fix posts in the user's page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,8 +15,8 @@
   <div>
     <h2><%= post.title%></h2>
     <h3><%= post.text%></h3>
-    <p>comments: <%= post.comments_counter || 0%></p>
-    <p>likes: <%= post.likes_counter || 0%></p>
+    <p>comments: <%= post.comments_counter || 0%>, likes: <%= post.likes_counter || 0%></p>
+
   </div>
   <%end%>
   <%end%>
