--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <% @users.each do |user|%>
 <div>
   <img src='#{ <%= user.photo %> }' width='100' height='100' />
-  <span><%= user.name%></span>
+  <span><a href="http://localhost:3000/users/<%= user.id%>"><%= user.name%></a></span>
   <p>number of posts: <%=user.posts_counter || 0%></p>
   <hr />
 </div>
