--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,12 +11,11 @@
   <h1>This User Dose Not Have Any Posts</h1>
   <%end%>
   <% @posts.each do |post|%>
-  <% if post.user_id = @user.id %>
+  <% if post.user_id == @user.id %>
   <div>
     <h2><%= post.title%></h2>
     <h3><%= post.text%></h3>
     <p>comments: <%= post.comments_counter || 0%>, likes: <%= post.likes_counter || 0%></p>
-
   </div>
   <%end%>
   <%end%>
