--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @comment, url:  user_post_comments_path, local:true) do |f|%>
+<%= form_with scope: :comment, url:  user_post_comments_path, local:true do |f|%>
 
 <p>
   <%=f.label :text%><br />
