--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,8 +12,8 @@
   <%end%>
   <% @posts.each do |post|%>
   <% if post.user_id == @user.id %>
-  <div>
-    <h2><%= post.title%></h2>
+  <div class="post-div">
+    <h2><%= link_to post.title, "/users/#{@user.id}/posts/#{post.id}"%></h2>
     <h3><%= post.text%></h3>
     <p>comments: <%= post.comments_counter || 0%>, likes: <%= post.likes_counter || 0%></p>
   </div>
