--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% @users.each do |user|%>
 <div>
-  <img src='#{ <%= user.photo %> }' width='100' height='100' />
+  <img src='#{ <%= user.photo %> }' alt="user-img" />
   <%= link_to user.name, user%>
   <p>number of posts: <%=user.posts_counter || 0%></p>
   <hr />
