--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <img src='#{ <%= @user.photo %> }' width='100' height='100' />
+  <img src='#{ <%= @user.photo %> }' alt="user-img" />
   <span><%= @user.name%></span>
   <h4>Number of posts:- <%= @user.posts_counter || 0%></h4>
   <h3>Bio: <%=@user.bio %></h3>
