--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <img src='#{<%= @user.photo %>}' alt='user-img' width='100' height='100' />
+  <img src='#{<%= @user.photo %>}' alt='user-img' />
   <span><strong><%= @user.name%></strong></span><br />
   <span><strong>number of posts: <%=@user.posts_counter || 0%><strong></span>
 </div>
@@ -14,7 +14,7 @@
   <% if post.user_id == @user.id %>
   <div class="post-div">
     <div>
-      <h2><%= post.title%></h2>
+      <h2><%= link_to post.title, "/users/#{@user.id}/posts/#{post.id}"%></h2>
       <h3><%= post.text%></h3>
       <p>comments: <%= post.comments_counter || 0%>, likes: <%= post.likes_counter || 0%></p>
     </div>
