--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 
 <body>
   <%= render 'layouts/messages' %>
+  <p class='notice'><%= notice %></p>
+  <p class='alert'><%= alert %></p>
   <%= yield %>
 </body>
 
