--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,16 @@
 </div>
 
 <div class="field">
+  <%= f.label :bio %><br />
+  <%= f.text_field :bio, autofocus: true %>
+</div>
+
+<div class="field">
+  <%= f.label :Photo %><br />
+  <%= f.text_field :photo, autofocus: true %>
+</div>
+
+<div class="field">
   <%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
 </div>
