--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to "sing_up", new_user_registration_path, class: "no-underline"%> OR <%= link_to "sing_in", user_session_path, class: "no-underline"%></h3>
+
 <% @users.each do |user|%>
 <div>
   <img src='#{ <%= user.photo %> }' alt="user-img" />
@@ -6,3 +8,5 @@
   <hr />
 </div>
 <%end%>
+
+<h3><%= button_to "log-out" , destroy_user_session_path, method: :delete ,class: "no-underline red-color"%></h3>
