--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div>
   <h1><%=@post.title%></h1>
   <h2><%=@post.text%></h2>
-  <p>comments: <%= @post.comments_counter || 0%></p>
-  <p>likes: <%= @post.likes_counter || 0%></p>
+  <p>comments: <%= @post.comments_counter || 0%> , likes: <%= @post.likes_counter || 0%></p>
+  <%= link_to "Delete Post" ,  "/users/#{@post.user.id}/posts/#{@post.id}", data: { turbo_method: "delete", turbo_confirm: "Are you sure to delete" } ,class: "no-underline red-color"%>
   <hr />
   <h1>Comments</h1>
   <hr />
@@ -10,7 +10,6 @@
   <h1>There is no comments</h1>
   <%end%>
   <% @user.each do |u|%>
-
   <% @comments.each do |comment|%>
   <%if u.id == comment.user_id%>
   <span><strong><%= u.name%></strong>: </span>
@@ -28,4 +27,4 @@
   <%end%>
 </div>
 
-<%= link_to "Posts", user_posts_path%>
+<%= link_to "Posts", user_posts_path, class: "no-underline"%>
