add comment delete function

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,8 +30,8 @@
   </div>
   <div class='post-div'>
     <h1>Comments</h1>
-    <% post.comments.includes(:user).each do |comment|%>
-    <h3><%= comment.user.name %>:<%= comment.text %></h3>
+    <% post.comments.includes(:user, :post).each do |comment|%>
+    <h3><%= comment.user.name %>:<%= comment.text %> <%= link_to "Delete Comment" ,  user_post_comment_path(comment.user.id,comment.post.id,comment), data: { turbo_method: "delete", turbo_confirm: "Are you sure to delete" } ,class: "no-underline red-color margin"%></h3>
     <%end%>
   </div>
   <%end%>
