--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
   <% if @user.posts.empty? %>
   <h1>This User Dose Not Have Any Posts</h1>
   <%else%>
-  <% @posts.includes(:user).each do |post|%>
+  <% @posts.each do |post|%>
   <% if post.user_id == @user.id %>
   <div class="post-div">
     <div>
