--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h3><%= link_to "sing_up", new_user_registration_path, class: "no-underline"%> OR <%= link_to "sing_in", user_session_path, class: "no-underline"%></h3>
 
-<p>Loged as <br><strong><%= current_user.name %></strong></p>
+<%# <p>Loged as <br><strong><%= current_user.name ></strong></p>%>
 
 <% @users.each do |user|%>
 <div>
